# next-action-suggester

./: .gitignore  README.md  pr_description.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/app/: main.py
frontend/: package-lock.json
frontend/src/: App.tsx
